# Locally

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
include/: apihandler.h  config.h  filewatcher.h  httpfilehandler.h  log.h  server.h  utils.h  websocket.h
src/: apihandler.cpp  config.cpp  filewatcher.cpp  httpfilehandler.cpp  log.cpp  server.cpp  utils.cpp  websocket.cpp
